# Web_TDK

./: PROJECT_COMPLETION_SUMMARY.md  Readme.MD  Readme.md
web-client/: package.json  (+1 more)
web_tdk_server/: .dockerignore  .env.example  DEPLOY_GUIDE.md  Dockerfile  Dockerfile.init  Dockerfile.local  GCP_OWNER_SETUP.md  MIGRATION_GUIDE.md  Makefile  QUICK_OWNER_SETUP.md  README.md  README_DOCKER_LOCAL.md  README_LINUX.md  Readme.md  auth.py  client-cert.pem  client-key.pem  cloudbuild-init-owner.yaml  cloudbuild.yaml  cmd.txt  create_owner.py  create_tables.py  database.py  docker-compose.yml  full-build-log.txt  install_service.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_create_owner.sh  run_migration.py  run_server.bat  run_server.ps1  run_server.sh  security.py  server-ca.pem  source.tgz  uninstall_service.sh  (+1 more)
web_tdk_server/database/: __init__.py  announcement.py  connection.py  school.py  user.py
web_tdk_server/migrations/: add_absence_approval_fields.sql  add_absence_date_end_days_count.sql  add_classroom_id_to_grades.sql  add_classroom_id_to_subject_schedules.sql  add_credits_and_activity_to_subjects.sql  add_grade_level_to_users.sql  add_subject_type_and_classroom_subjects.sql
web_tdk_server/models/: __init__.py  absence.py  admin_request.py  announcement.py  attendance.py  classroom.py  classroom_subject.py  document.py  grade.py  homeroom.py  password_reset_request.py  schedule.py  school.py  school_deletion_request.py  subject.py  subject_student.py  user.py
web_tdk_server/router/: announcement.py  school.py  user.py
(+180 files in other folders)
