[project]
name = "web-tdk-server"
version = "0.1.0"
description = "Backend server for Web TDK"
authors = [
    {name = "Ilham Hajidoloh", email = "ihsaniah112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]
packages = [
    { include = "web_tdk_server" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
